feat: add swagger docs to define the request and response
